--- a/miniapp/index.html
+++ b/miniapp/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Dynamic Capital VIP Mini App</title>
+  <title>Dynamic Capital VIP Mini App - Coming Soon</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
